# Learnings

./: .gitignore  INDEX.md  README.md
.claude/: settings.json
01_coding_dsa/: blind75_skeletons.md  code_snip_practice.py  dsa_warmup_templates.py
01_coding_dsa/practice/: KthLargestRunningStream.py  LRUCache.py  MergeInterval.py  TopK.py  concurrency_example.py  ds_algo.py  practice_session.py  reverse_words.py  sliding_window.py  (+5 more)
02_python_data_eng/: python_de_prep.md
03_ai_ml_engineering/: GenAI_System_Architecture_Learning_Guide.md  agentic-platform-system-design.md  transformers_explained.md
03_ai_ml_engineering/mcp_examples/minimal_mcp_company_info/: README.md  pyproject.toml
03_ai_ml_engineering/mcp_examples/minimal_mcp_company_info/src/minimal_mcp_company_info/: __init__.py  server.py
03_ai_ml_engineering/mcp_examples/minimal_mcp_company_info/tests/: test_server.py
04_system_design/: AI_Governance_Revision_Notes.md  Interview_question.txt  TopK  ai_system_design_followup_questions.md  guid_generator.py  system_design_roadmap.md
05_behavioral/: behavioral.md  elevator_pitch.md
06_study_plans/: 15_day_senior_ai_prep_plan.md  LEARNING_PATTERN_COACHING_PROFILE.md  interview_prep_plan.md  staff_ai_engineer_prep_plan.md
bootcamp_lab/: capestone_project_ideas.html  capestone_project_ideas_leadership.html  es-metadata.yml
documents/: Agent_Eval_Interview_Summary.md  Agent_Migration_V2_vs_V1_June30.html  Agent_Quality_Evaluation_Framework.md  Evaluation_Jury.docx
reference/: Interview prep sheet.docx
resumes/: Ankita_Jain_Resume_moody.docx
(+70 files in other folders)
