[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimal-mcp-company-info"
version = "0.1.0"
description = "Minimal MCP server POC with one company info tool."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/minimal_mcp_company_info"]
